--- a/data:analysis/combined_notebook.ipynb
+++ b/data:analysis/combined_notebook.ipynb
@@ -645,18 +645,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2 minutes about Open Data: "
+    "### Two min on Open Data: "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* What's open data? Who can use it? \n",
-    "* Why is it so cool? \n",
-    "* Detroit's open data portal https://data.detroitmi.gov/ \n",
-    "\n",
-    "\n"
+    "All data we will work with today comes form the City of Detroit’s open data platform (https://data.detroitmi.gov/ ). This is a good chance to touch upon open data portals which are now pretty prevalent in American governmental agencies. These portals are providing an immense and constant amount to information about cities coming from sensors snd people. For those of you who are not so familiar with it, the main idea is to provide citizens with tools to observe, monitor and better understand how the government preforms, through millions of data points. The one caveat is that in order to analyze and understand the data one needs posses data literacy skills, which means open data increases transparency and empowers democracy.. if you know how to work with it! So out goal here is to explore some very powerful tools to access and explore open datasets pretty easily. Because data can and should be for all.\n"
    ]
   },
   {
@@ -664,6 +660,13 @@
    "metadata": {},
    "source": [
     "## 3.  Demolitions Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As mentioned , we will start with the Demolitions dataset - which is a comprehensive documentation of each demolition conducted in Detroit, including price, type of property, date and source of funding. \n"
    ]
   },
   {
@@ -702,7 +705,7 @@
    "metadata": {},
    "source": [
     "#### Insights From Data Descriptives: \n",
-    "Total number and cost of demolitions"
+    "As an initial step, we will explore some descriptives about the data - total number of demolitions and total price spent on Detroit’s demolitions during the studied period. "
    ]
   },
   {
@@ -739,6 +742,13 @@
    "source": [
     "# calculate total cost of demolitions\n",
     "print (\"The total price of demolitions is ~$\" + str(int(demolitions['Price'].sum() / 1000000))+\"M\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we want to collapse the data-frame so that we can know how many demolitions have accrued per neighborhood — note that this will reduce drastically the size of the DF from 14K~ (one row per demolition) to 170~ (one row per neighborhood). We will also conduct some data cleaning which we will not delay on. Our new DF is 'dem'."
    ]
   },
   {
@@ -2761,6 +2771,15 @@
     "* Important: To save your notebook to your local machine - go to: File- Download as - Choose HTML (or Notebook if you have Anaconda installed to your computer) \n",
     "* To access data used for this lab go to: https://data.detroitmi.gov/\n",
     "* If you are intrested in learning more about Detroit's demolitions and deepen your study using other cool datasets, we recommended analyzing the Demolition Pipeline data as well as the Upcoming Demolitions to learn where the next demolitions are planned to take place (both datasets can be accessed in Detroit's open data portal) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Survey \n",
+    "\n",
+    "https://docs.google.com/forms/d/e/1FAIpQLScxk-3wwSHPCAcZIAzaewlwG_TqGyuduxYR45ljUWAD_5JrqA/viewform?usp=sf_link"
    ]
   },
   {
