--- a/data:analysis/combined_notebook.ipynb
+++ b/data:analysis/combined_notebook.ipynb
@@ -877,7 +877,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try to better understand the cost of demolitions by neighborhood. \n"
+    "We want to know the edges: most expensive and cheapest neighborhoods demolitions.  “Head” are the first rows of a data frame and “tail” are the last rows."
    ]
   },
   {
@@ -984,7 +984,7 @@
     "#### Your turn -- \n",
     "### Task I: \n",
     "Can you calculate the mean cost of demolitions per neighborhood? \n",
-    "Note the Dataframe is already aggragated by hoods so you \"only\" need to figure out how to find the mean."
+    "Note the Dataframe is already aggragated by neighborhoods so you \"only\" need to figure out how to find the mean."
    ]
   },
   {
@@ -1012,9 +1012,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's look into number of demolitions and find out where did Detroit's  demolitions take place? \n",
     "\n",
-    "### Find Number of Demolitions per Neighborhood"
+    "\n",
+    "### Find Number of Demolitions per Neighborhood\n",
+    "Now we will create a new data-frame to count number of demolitions per neighborhood. We use our master DF “demolitions” to create a new DF called “demolitionsnum”."
    ]
   },
   {
@@ -1026,6 +1027,13 @@
     "#Aggregate number of demolitions by neighborhood \n",
     "\n",
     "demolitionsnum = demolitions.groupby(['Neighborhood']).count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, we will conduct some data cleaning to have a more “workable” data frame. "
    ]
   },
   {
@@ -1073,6 +1081,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally we can explore our new data-frame: which neighborhood has had the largest number of demolitions?  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -1096,7 +1111,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make it relative: divider number of demolitions by the size of  a given neighborhood "
+    "Warrendale has the highest number of demolitions. Interestingly,  a study by Detroit’s DoH found a link between vacancies, demolitions and high lead level in children residing nearby - specifically one the summer. We will not dive into this over our workshop, but as future study it would be interesting to learn how Warrendale’s demolitions seasonality may have influenced its children (relatively low) lead levels.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make it relative: divide number of demolitions by the size of  a given neighborhood "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have a count per neighborhood, but in order to get a better understanding compare one neighborhood with another we’d need to find a way standardize. This means we need to refer to another neighborhood variable in order to determine the weight of demolitions per area. This is needed since the area and number of people is different so x demolitions in hood might not be the same as x demolitions in hood b. To account for that we will divide by the total area of each neighborhood. In other parts of the notebook we will use other methods to overcome this issue. "
    ]
   },
   {
@@ -1253,7 +1282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### \"normalized_demo\" is the number of demolitions per 1000 acres"
+    "The result:\"normalized_demo\" is the number of demolitions per 1000 acres"
    ]
   },
   {
@@ -1261,6 +1290,13 @@
    "metadata": {},
    "source": [
     "#### Sort by # of Demolitions & Plot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s sort the normalized demolitions ascending and bar plot it - each bar will represnt one neighborhood. "
    ]
   },
   {
@@ -1301,7 +1337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The (large) number of hoods  (x axis) make the bar looking very tiny and hard to derive information from. However, it seems like there is a long tail, meaning many neighborhoods in the city exprienced a relative small amount of demolitions in their communities."
+    "We see that even after we normalized the data there is  variance in demotions across Detroit. Some of it has to do with the fact that some areas in Detroit were initially defined as Hard Hit Fund zones where federal assistance was available, later more funds were allocated to cover more areas. The (large) number of hoods  (x axis) make the bar looking very tiny and hard to derive information from. However, it seems like there is a long tail, meaning many neighborhoods in the city experienced a relative small amount of demolitions in their communities."
    ]
   },
   {
@@ -1455,7 +1491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### This bar chart maked it easier to view where did the demolitions policy were most prevlent with Westwood Park appearing as the neighborhood most influenced by demolitions.  "
+    "#### This bar chart makes it easier to view where did the demolitions policy were most prevlent with Westwood Park appearing as the neighborhood most influenced by demolitions.  "
    ]
   },
   {
