--- a/data:analysis/combined_notebook.ipynb
+++ b/data:analysis/combined_notebook.ipynb
@@ -1125,7 +1125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have a count per neighborhood, but in order to get a better understanding compare one neighborhood with another we’d need to find a way standardize. This means we need to refer to another neighborhood variable in order to determine the weight of demolitions per area. This is needed since the area and number of people is different so x demolitions in hood might not be the same as x demolitions in hood b. To account for that we will divide by the total area of each neighborhood. In other parts of the notebook we will use other methods to overcome this issue. "
+    "We have a count per neighborhood, but in order to get a better understanding and be able to compare one neighborhood with another we’d need to find a way standardize this count. This means we need to refer to another neighborhood variable in order to determine the weight of demolitions per area. This is needed since the area and number of people is different so x demolitions in hood might not be the same as x demolitions in hood b. To account for that we will divide by the total area of each neighborhood. In other parts of the notebook we will use other methods to overcome this issue. "
    ]
   },
   {
